--- a/requirements.txt
+++ b/requirements.txt
@@ -1,38 +1,13 @@
-aiohappyeyeballs==2.5.0
-aiohttp==3.11.13
-aiosignal==1.3.2
-anyio==4.8.0
-arrow==1.2.3
-attrs==25.1.0
-certifi==2025.1.31
-charset-normalizer==3.4.1
-discord.py==2.5.2
-fire==0.5.0
-frozenlist==1.5.0
-h11==0.14.0
-h2==4.2.0
-hpack==4.1.0
-httpcore==0.17.3
+arrow==1.2.*
+fire==0.5.*
+loguru==0.7.*
+tenacity==8.2.*
+schedule==1.2.*
+ratelimit==2.2.*
+python-socketio[client]<5
+httpx[http2]==0.24.*
+pyjwt==2.7.*
+git+https://github.com/hldh214/python-engineio-3-for-lokbot.git@v3.14.3
 httpx==0.24.1
-hyperframe==6.1.0
-idna==3.10
-loguru==0.7.3
-multidict==6.1.0
-numpy==2.2.3
-propcache==0.3.0
-PyJWT==2.7.0
-python-dateutil==2.9.0.post0
-python-dotenv==1.0.1
-python-engineio @ git+https://github.com/hldh214/python-engineio-3-for-lokbot.git@f80ff666dc5dc21a8911108132ca75aaa239127b
-python-socketio==4.6.1
-ratelimit==2.2.1
-requests==2.32.3
-schedule==1.2.2
-six==1.17.0
-sniffio==1.3.1
-tenacity==8.2.3
-termcolor==2.5.0
-typing_extensions==4.12.2
-urllib3==2.3.0
-websocket-client==1.8.0
-yarl==1.18.3
+discord-py
+python-dotenv
